--- a/fetch.html
+++ b/fetch.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <button id="getUsers" >get users</button>
+    <button id="getJson">get data from external source</button>
+
+    <hr>
+    <form>
+        <input type="text" id="title" value="title">
+        <br>
+        <textarea id='body'  placeholder="body"></textarea>
+        <button type="submit" id='addPost'>add post</button>
+    </form>
 
 <div id="output">
     
